# nixos-config

./: .gitignore  README.md  flake.nix
.github/workflows/: flake-update.yml
dotfiles/claude/: settings.json  settings.local.json  statusline.sh
dotfiles/fuzzel/: fuzzel.ini
dotfiles/hypr/: env.conf  hyprland.conf  hyprpaper.conf  monitors.conf  unminimize.sh  workspaces.conf
dotfiles/quickshell/bar/: Pill.qml  shell.qml
dotfiles/quickshell/bar/audio/: AudioMixerPopup.qml  qmldir
dotfiles/quickshell/bar/music/: MusicPopup.qml
dotfiles/quickshell/bar/network/: NetworkPopup.qml  qmldir
dotfiles/quickshell/bar/scripts/: bluetooth_panel.sh  music_panel.sh  sysmon_panel.sh  vpn_panel.sh  weather.sh  wifi_panel.sh
dotfiles/quickshell/bar/sidebar/: GeminiSidebar.qml
dotfiles/quickshell/bar/sysmon/: SysMonPopup.qml  qmldir
dotfiles/quickshell/bar/vpn/: VpnPopup.qml  qmldir
dotfiles/swaync/: config.json  style.css
dotfiles/walker/: config.toml
dotfiles/xfce4/xfconf/xfce-perchannel-xml/: thunar.xml
dotfiles/zen-browser/: policies.json  user.js
home/: ai.nix  apps.nix  browser.nix  default.nix  git.nix  gtk.nix  hyprland.nix  kitty.nix  quickshell.nix  shell.nix
hosts/desktop/: configuration.nix  hardware-configuration.nix
modules/: core.nix  gaming.nix  hyprland.nix  login.nix  nvidia.nix  security.nix  services.nix  virtualisation.nix
overlays/: default.nix
plugins/gruvbar/: CMakeLists.txt  bar.cpp  bar.hpp  globals.hpp  main.cpp
scripts/: target-setup.sh
secrets/: .sops.yaml  keys.txt.age  secrets.yaml
